tests/expectations/compiler/array/nested_array_sum_fail.out
Error [ETYC0372117]: Expected an array but type `u32` was found.
    --> compiler-test:8:29
     |
   8 |                 sum = sum + a[i][j];
     |                             ^^^^
